--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Kayhan <me@kayhan.dev>"]
 python = "^3.9"
 pandas = "^1.4.2"
 spacy = "^3.3.1"
+emot = "^3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
