--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = ""
 authors = ["Kayhan <me@kayhan.dev>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.11"
 pandas = "^1.4.2"
 spacy = "^3.3.1"
 emot = "^3.1"
+numpy = "^1.23.0"
+scikit-learn = "^1.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
