--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ spacy = "^3.3.1"
 emot = "^3.1"
 numpy = "^1.23.0"
 scikit-learn = "^1.1.1"
+dynaconf = "^3.1.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
