--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ emot = "^3.1"
 numpy = "^1.23.0"
 scikit-learn = "^1.1.1"
 dynaconf = "^3.1.9"
+pandarallel = "^1.6.1"
+torch = "^1.11.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
