--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.0.12; python_version >= "3.7" and python_version < "4" and
 click==8.1.3; python_version >= "3.7"
 colorama==0.4.5; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.5.0" and python_version >= "3.7" and platform_system == "Windows"
 cymem==2.0.6; python_version >= "3.6"
+dill==0.3.5.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.7.0"
 dynaconf==3.1.9; python_version >= "3.7"
 emot==3.1
 idna==3.3; python_version >= "3.7" and python_version < "4"
@@ -15,9 +16,11 @@ markupsafe==2.1.1; python_version >= "3.7"
 murmurhash==1.0.7; python_version >= "3.6"
 numpy==1.23.0; python_version >= "3.8"
 packaging==21.3; python_version >= "3.6"
+pandarallel==1.6.1
 pandas==1.4.3; python_version >= "3.8"
 pathy==0.6.1; python_version >= "3.6"
 preshed==3.0.6; python_version >= "3.6"
+psutil==5.9.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
 pydantic==1.8.2; python_full_version >= "3.6.1" and python_version >= "3.6"
 pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.6"
 python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
@@ -33,8 +36,9 @@ spacy==3.3.1; python_version >= "3.6"
 srsly==2.4.3; python_version >= "3.6"
 thinc==8.0.17; python_version >= "3.6"
 threadpoolctl==3.1.0; python_version >= "3.8"
+torch==1.11.0; python_full_version >= "3.7.0"
 tqdm==4.64.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 typer==0.4.1; python_version >= "3.6"
-typing-extensions==4.2.0; python_full_version >= "3.6.1" and python_version >= "3.7"
+typing-extensions==4.2.0; python_version >= "3.7" and python_full_version >= "3.7.0"
 urllib3==1.26.9; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
 wasabi==0.9.1; python_version >= "3.6"
