--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,42 @@
+appnope==0.1.3; sys_platform == "darwin" and python_version >= "3.8"
+asttokens==2.0.5; python_version >= "3.8"
+backcall==0.2.0; python_version >= "3.8"
 blis==0.7.8; python_version >= "3.6"
 catalogue==2.0.7; python_version >= "3.6"
 certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
 charset-normalizer==2.0.12; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.5.0"
 click==8.1.3; python_version >= "3.7"
-colorama==0.4.5; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.5.0" and python_version >= "3.7" and platform_system == "Windows"
+colorama==0.4.5; python_version >= "3.8" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.8" and python_full_version >= "3.5.0" and platform_system == "Windows"
 cymem==2.0.6; python_version >= "3.6"
+decorator==5.1.1; python_version >= "3.8"
 dill==0.3.5.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.7.0"
 dynaconf==3.1.9; python_version >= "3.7"
 emot==3.1
+executing==0.8.3; python_version >= "3.8"
 idna==3.3; python_version >= "3.7" and python_version < "4"
+ipython==8.4.0; python_version >= "3.8"
+jedi==0.18.1; python_version >= "3.8"
 jinja2==3.1.2; python_version >= "3.7"
 joblib==1.1.0; python_version >= "3.8"
 langcodes==3.3.0; python_version >= "3.6"
 markupsafe==2.1.1; python_version >= "3.7"
+matplotlib-inline==0.1.3; python_version >= "3.8"
 murmurhash==1.0.7; python_version >= "3.6"
 numpy==1.23.0; python_version >= "3.8"
 packaging==21.3; python_version >= "3.6"
 pandarallel==1.6.1
 pandas==1.4.3; python_version >= "3.8"
+parso==0.8.3; python_version >= "3.8"
 pathy==0.6.1; python_version >= "3.6"
+pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.8"
+pickleshare==0.7.5; python_version >= "3.8"
 preshed==3.0.6; python_version >= "3.6"
+prompt-toolkit==3.0.29; python_full_version >= "3.6.2" and python_version >= "3.8"
 psutil==5.9.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+ptyprocess==0.7.0; sys_platform != "win32" and python_version >= "3.8"
+pure-eval==0.2.2; python_version >= "3.8"
 pydantic==1.8.2; python_full_version >= "3.6.1" and python_version >= "3.6"
+pygments==2.12.0; python_version >= "3.8"
 pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.6"
 python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
 pytz==2022.1; python_version >= "3.8"
@@ -34,11 +49,14 @@ spacy-legacy==3.0.9; python_version >= "3.6"
 spacy-loggers==1.0.2; python_version >= "3.6"
 spacy==3.3.1; python_version >= "3.6"
 srsly==2.4.3; python_version >= "3.6"
+stack-data==0.3.0; python_version >= "3.8"
 thinc==8.0.17; python_version >= "3.6"
 threadpoolctl==3.1.0; python_version >= "3.8"
 torch==1.11.0; python_full_version >= "3.7.0"
 tqdm==4.64.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+traitlets==5.3.0; python_version >= "3.8"
 typer==0.4.1; python_version >= "3.6"
 typing-extensions==4.2.0; python_version >= "3.7" and python_full_version >= "3.7.0"
 urllib3==1.26.9; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
 wasabi==0.9.1; python_version >= "3.6"
+wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.8"
