--- a/requirements.txt
+++ b/requirements.txt
@@ -7,29 +7,34 @@ certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
 charset-normalizer==2.0.12; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.5.0"
 click==8.1.3; python_version >= "3.7"
 colorama==0.4.5; python_version >= "3.8" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.8" and python_full_version >= "3.5.0" and platform_system == "Windows"
+cycler==0.11.0; python_version >= "3.7"
 cymem==2.0.6; python_version >= "3.6"
 decorator==5.1.1; python_version >= "3.8"
 dill==0.3.5.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.7.0"
 dynaconf==3.1.9; python_version >= "3.7"
 emot==3.1
 executing==0.8.3; python_version >= "3.8"
+fonttools==4.33.3; python_version >= "3.7"
 idna==3.3; python_version >= "3.7" and python_version < "4"
 ipython==8.4.0; python_version >= "3.8"
 jedi==0.18.1; python_version >= "3.8"
 jinja2==3.1.2; python_version >= "3.7"
 joblib==1.1.0; python_version >= "3.8"
+kiwisolver==1.4.3; python_version >= "3.7"
 langcodes==3.3.0; python_version >= "3.6"
 markupsafe==2.1.1; python_version >= "3.7"
 matplotlib-inline==0.1.3; python_version >= "3.8"
+matplotlib==3.5.2; python_version >= "3.7"
 murmurhash==1.0.7; python_version >= "3.6"
 numpy==1.23.0; python_version >= "3.8"
-packaging==21.3; python_version >= "3.6"
+packaging==21.3; python_version >= "3.7"
 pandarallel==1.6.1
 pandas==1.4.3; python_version >= "3.8"
 parso==0.8.3; python_version >= "3.8"
 pathy==0.6.1; python_version >= "3.6"
 pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.8"
 pickleshare==0.7.5; python_version >= "3.8"
+pillow==9.1.1; python_version >= "3.7"
 preshed==3.0.6; python_version >= "3.6"
 prompt-toolkit==3.0.29; python_full_version >= "3.6.2" and python_version >= "3.8"
 psutil==5.9.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
@@ -37,12 +42,13 @@ ptyprocess==0.7.0; sys_platform != "win32" and python_version >= "3.8"
 pure-eval==0.2.2; python_version >= "3.8"
 pydantic==1.8.2; python_full_version >= "3.6.1" and python_version >= "3.6"
 pygments==2.12.0; python_version >= "3.8"
-pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.6"
+pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.7"
 python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
 pytz==2022.1; python_version >= "3.8"
 requests==2.28.0; python_version >= "3.7" and python_version < "4"
 scikit-learn==1.1.1; python_version >= "3.8"
 scipy==1.8.1; python_version >= "3.8" and python_version < "3.11"
+setuptools-scm==7.0.2; python_version >= "3.7"
 six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
 smart-open==5.2.1; python_version >= "3.6" and python_version < "4.0"
 spacy-legacy==3.0.9; python_version >= "3.6"
@@ -52,6 +58,7 @@ srsly==2.4.3; python_version >= "3.6"
 stack-data==0.3.0; python_version >= "3.8"
 thinc==8.0.17; python_version >= "3.6"
 threadpoolctl==3.1.0; python_version >= "3.8"
+tomli==2.0.1; python_version >= "3.7"
 torch==1.11.0; python_full_version >= "3.7.0"
 tqdm==4.64.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 traitlets==5.3.0; python_version >= "3.8"
